refactor(displayui): modularize UiScene architecture, extract controllers and utility classes